--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,7 @@ body {
   justify-content: flex-start;
   gap: 0vw 2vw;
   flex: 1;
+  font-size: 1.25em;
 }
 
 
@@ -102,5 +103,6 @@ body {
     background-color: var(--purple);
     border-radius: 5px;
     color: var(--gold);
+    font-weight: bold;
 }
 
