--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,7 @@ body {
 .count {
   text-align: center;
   margin-bottom: 2em;
+  font-size: 1.5em;
 }
 
 #blackjack-title {
@@ -104,5 +105,6 @@ body {
     border-radius: 5px;
     color: var(--gold);
     font-weight: bold;
+    font-size: 18px;
 }
 
